# verification-code-tool

./: PROJECT_SUMMARY.md  README.md  USAGE_EXAMPLES.md  batch_get.py  config.py  quick_get.py  run.sh  verification_code_getter.py
rust-verification-tool/: Cargo.toml  README.md
rust-verification-tool/src/: app.rs  config.rs  error.rs  main.rs
rust-verification-tool/src/core/: client.rs  crypto.rs  device.rs  mod.rs  verification.rs
rust-verification-tool/src/ui/: components.rs  logger.rs  mod.rs  theme.rs
wx-source/: AE61E3604B3CC87FC8078B67643A8012.js  API顺序、请求、返回参数.md  app.js  app.json  appservice.app.js  chunk_0.appservice.js  chunk_0.webview.js  chunk_1.appservice.js  chunk_1.webview.js  chunk_2.appservice.js  chunk_2.webview.js  chunk_3.appservice.js  chunk_3.webview.js  chunk_4.appservice.js  chunk_4.webview.js  chunk_5.appservice.js  chunk_5.webview.js  chunk_6.appservice.js  chunk_6.webview.js  common.app.js  webview.app.js
wx-source/pages/code/: code.js
wx-source/pages/easter/: easter.js
wx-source/pages/index/: index.js
wx-source/pages/software-select/: software-select.js
wx-source/pages/splash/: splash.js
wx-source/pages/validity/: validity.js  validity.json
wx-source/pages/validity-select/: validity-select.js  validity-select.json
